--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,7 +20,8 @@
         android:layout_marginEnd="130dp"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="350dp"
-        android:layout_marginBottom="100dp" />
+        android:layout_marginBottom="100dp"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:layout_alignEnd="@+id/imageView"
         android:textAlignment="center"
         android:textIsSelectable="false"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,7 +48,8 @@
         android:layout_marginStart="104dp"
         android:layout_alignTop="@+id/imageView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +59,8 @@
         android:id="@+id/textView4"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5" />
+        android:layout_alignStart="@+id/textView5"
+        android:visibility="invisible" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,7 +73,8 @@
         android:layout_marginEnd="42dp"
         android:layout_below="@+id/textView4"
         android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3" />
+        android:layout_alignEnd="@+id/textView3"
+        android:visibility="invisible" />
 
     <ListView
         android:layout_width="match_parent"
