--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -77,6 +77,7 @@
         android:visibility="invisible" />
 
     <ListView
+        style="@style/ForecastListStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ListViewForecast"
