--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -12,17 +12,24 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+		android:minWidth="56dp">
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
+		android:minWidth="120dp"
                 android:id="@+id/detail_day_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+		android:textSize="24sp"/>
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
                 android:id="@+id/detail_date_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+		android:textColor="@color/grey_700"
+		android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -33,26 +40,40 @@
             android:orientation="vertical">
 
             <TextView
+		android:fontFamily="sans-serif-light"
                 android:id="@+id/detail_high_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+		android:textSize="96sp"/>
 
             <TextView
                 android:id="@+id/detail_low_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+		android:layout_marginLeft="8dp"
+		android:textColor="@color/grey_700"
+		android:textSize="48sp"/>
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
+		android:layout_marginTop="4dp"
+		android:textAppearance="?android:textAppearanceLarge"
                 android:id="@+id/detail_humidity_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
+		android:layout_marginTop="4dp"
+		android:textAppearance="?android:textAppearanceLarge"
                 android:id="@+id/detail_pressure_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
+		android:layout_marginTop="4dp"
+		android:textAppearance="?android:textAppearanceLarge"
                 android:id="@+id/detail_wind_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -61,6 +82,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+		android:layout_marginLeft="16dp"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
@@ -70,6 +92,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+		android:fontFamily="sans-serif-condensed"
+		android:textColor="@color/grey_700"
+		android:textAppearance="?android:textAppearanceLarge"
                 android:id="@+id/detail_forecast_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
